# async-task-queue-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
api/: __init__.py  app.py
api/middleware/: logging_middleware.py
api/routes/: monitoring.py  queue.py  tasks.py
api/schemas/: __init__.py  queue_schema.py  task_schema.py
cli/: __init__.py  main.py
cli/commands/: monitor.py  queue.py  submit.py
cli/utils/: formatters.py
config/: __init__.py  redis_config.py  settings.py
core/: __init__.py  exceptions.py  exceptions.py.backup  queue_manager.py  result_store.py  task.py
scripts/: health_check.py  setup_redis.py  start_api.py  start_workers.py
tasks/: __init__.py  base_task.py  example_tasks.py  registry.py
tests/: __init__.py  conftest.py  test_api.py  test_async_worker.py  test_cli.py  test_examples.py  test_integration.py  test_queue_manager.py  test_result_store.py  test_task.py  test_worker_pool.py
tests/utils/: test_helpers.py
utils/: __init__.py  __init__.py.backup  exceptions.py  helpers.py  logger.py  serializers.py  validators.py
web/: routes.py
web/static/css/: style.css
web/static/js/: dashboard.js
web/templates/: base.html  dashboard.html  queue_status.html  task_detail.html
workers/: __init__.py  async_worker.py  base_worker.py  worker_pool.py
